--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
-useDynLib(anRpackage, .registration=TRUE)
+useDynLib(WHInter, .registration=TRUE)
 export("Rcpp.fake.fun")
 importFrom(Rcpp, evalCpp)
