--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the package does as one
         or more full sentences.
 License: GPL (>= 2)
-Depends: R (>= 3.5.0)
+Depends: R (>= 3.5.0), Matrix
 Imports: Rcpp (>= 1.0.4), RcppArmadillo
 LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 7.1.0
